Update author info and disable GoReleaser tap push
Add full name and LinkedIn to LICENSE and README author section.
Set skip_upload in goreleaser to prevent direct homebrew-tap pushes.

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,6 +25,7 @@ brews:
     repository:
       owner: jeryldev
       name: homebrew-tap
+    skip_upload: true
     homepage: "https://github.com/jeryldev/kb"
     description: "Terminal Kanban board for personal project management"
     license: "MIT"
